--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -22,10 +22,10 @@ jobs:
       run: sudo apt-get install libx11-dev xorg-dev freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev
       
     - name: configure
-      run: cmake -DON_CI=ON -G "Unix Makefiles" -S . -B ./build
+      run: cmake -DON_CI=ON -S . -B ./build
       
     - name: make
-      run: cd build && make
+      run: cd build && cmake --build .
 
     - name: test
       run: build/tests/BLIB.t 
