--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -16,10 +16,10 @@ jobs:
         submodules: 'true'
       
     - name: configure
-      run: cmake -DON_CI=On -G "Unix Makefiles" -S . -B ./build
+      run: cmake -DON_CI=On -S . -B ./build
       
     - name: make
-      run: cd build && make
+      run: cd build && cmake --build .
     
     - name: test
       run: build/tests/BLIB.t 
