--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ configure_target(BLIB)
 
 set(BUILD_SHARED_LIBS Off)
 add_compile_definitions(SFML_STATIC)
+set(SFML_USE_STATIC_STD_LIBS On)
 include_directories(lib/SFML/include)
 add_subdirectory(lib/SFML)
 set_target_properties(sfml-audio PROPERTIES CXX_STANDARD 98 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO)
