--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -74,7 +74,7 @@
         },
     ],
     "problemMatcher": {
-        "base": "$msCompile",
+        "base": "$gcc",
         "fileLocation": [
             "absolute"
         ]
