Add linux ssh helper

--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -27,5 +27,8 @@ jobs:
     - name: make
       run: cd build && cmake --build .
 
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+
     - name: test
       run: build/tests/BLIB.t 
