Add fake x display to linux verify

--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -31,4 +31,7 @@ jobs:
       uses: lhotari/action-upterm@v1
 
     - name: test
-      run: build/tests/BLIB.t 
+      run: |
+        export DISPLAY=:99
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 &
+        build/tests/BLIB.t 
