Mostly implement Vulkan textures

--- a/examples/Vulcan/utils/CMakeLists.txt
+++ b/examples/Vulcan/utils/CMakeLists.txt
@@ -7,6 +7,8 @@ target_sources(bvulkan PRIVATE
     RenderSwapFrame.cpp
     SwapChainSupportDetails.hpp
     SwapChainSupportDetails.cpp
+    Texture.hpp
+    Texture.cpp
     Vertex.hpp
     Vertex.cpp
     VertexBuffer.hpp
