--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(Engine)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Menu)
+add_subdirectory(Renderer)
 add_subdirectory(Resources)
 add_subdirectory(Shapes)
 add_subdirectory(Vulcan)
