Implement more of renderer

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -1,7 +1,6 @@
 target_sources(BLIB PUBLIC
     Cameras.hpp
     Config.hpp
-    Ref.hpp
     Renderer.hpp
 )
 
@@ -11,4 +10,5 @@ add_subdirectory(Renderables)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
 add_subdirectory(Uniforms)
+add_subdirectory(Util)
 add_subdirectory(Vulkan)
