--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     Object.hpp
+    ObjectFlags.hpp
     Pipeline.hpp
     PipelineInstance.hpp
     PipelineParameters.hpp
