--- a/src/Render/Renderer/CMakeLists.txt
+++ b/src/Render/Renderer/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
     Pipeline.cpp
+    PipelineInstance.cpp
     PipelineParameters.cpp
     RenderPass.cpp
     RenderPassParameters.cpp
