Implement more of renderer

--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -1,8 +1,9 @@
 target_sources(BLIB PUBLIC
+    DrawParameters.hpp
     Object.hpp
     ObjectFlags.hpp
     Pipeline.hpp
-    PipelineInstance.hpp
+    PipelineBatch.hpp
     PipelineParameters.hpp
     RenderPass.hpp
     RenderPassInstance.hpp
