--- a/src/Render/Renderer/CMakeLists.txt
+++ b/src/Render/Renderer/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(BLIB PRIVATE
     Pipeline.cpp
-    PipelineInstance.cpp
+    PipelineBatch.cpp
     PipelineParameters.cpp
     RenderPass.cpp
     RenderPassParameters.cpp
