--- a/src/Render/Vulkan/CMakeLists.txt
+++ b/src/Render/Vulkan/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PRIVATE
     DescriptorPoolRequirements.cpp
-    SwapFrame.cpp
+    Framebuffer.cpp
+    Swapchain.cpp
     VulkanState.cpp
 )
 
