--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(Components)
 add_subdirectory(Renderables)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
+add_subdirectory(Uniforms)
 add_subdirectory(Vulkan)
