--- a/src/Render/Resources/CMakeLists.txt
+++ b/src/Render/Resources/CMakeLists.txt
@@ -1,3 +1,7 @@
 target_sources(BLIB PRIVATE
+    MaterialPool.cpp
+    PipelineCache.cpp
     RenderPassCache.cpp
+    Texture.cpp
+    TexturePool.cpp
 )
