Refactor swap chain and framebuffers

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     DescriptorPoolRequirements.hpp
     Framebuffer.hpp
+    RenderFrame.hpp
     Swapchain.hpp
     VulkanState.hpp
 )
