Move material and texture into Renderer folder

--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(BLIB PUBLIC
     DrawParameters.hpp
+    Material.hpp
     Object.hpp
     ObjectFlags.hpp
     PipelineBatch.hpp
     RenderPassBatch.hpp
     Scene.hpp
+    Texture.hpp
 )
