Implement scene pool class

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(BLIB PUBLIC
     MaterialPool.hpp
     PipelineCache.hpp
     RenderPassCache.hpp
+    ScenePool.hpp
     TexturePool.hpp
 )
