--- a/src/Render/Resources/CMakeLists.txt
+++ b/src/Render/Resources/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(BLIB PRIVATE
     MaterialPool.cpp
     PipelineCache.cpp
     RenderPassCache.cpp
-    Texture.cpp
+    ScenePool.cpp
     TexturePool.cpp
 )
