--- a/src/Render/Renderer/CMakeLists.txt
+++ b/src/Render/Renderer/CMakeLists.txt
@@ -1,10 +1,7 @@
 target_sources(BLIB PRIVATE
     Object.cpp
-    Pipeline.cpp
     PipelineBatch.cpp
-    PipelineParameters.cpp
-    RenderPass.cpp
     RenderPassBatch.cpp
-    RenderPassParameters.cpp
     Scene.cpp
+    Texture.cpp
 )
