--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(BLIB PUBLIC
 )
 
 add_subdirectory(Cameras)
-add_subdirectory(Components)
+add_subdirectory(Primitives)
 add_subdirectory(Renderables)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
