Refactor render passes -> stages. Move stage logic into classes. Rename Object, RenderPassMembership, and others. Smaller refactors. Begin Observer implementation

--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -1,10 +1,13 @@
 target_sources(BLIB PUBLIC
     DrawParameters.hpp
     Material.hpp
-    Object.hpp
+    ObjectBatch.hpp
     ObjectFlags.hpp
     PipelineBatch.hpp
-    RenderPassBatch.hpp
     Scene.hpp
+    SceneObject.hpp
+    StagePipelines.hpp
     Texture.hpp
 )
+
+add_subdirectory(Stages)
