Get Observers mostly setup and working. Some issues with render passes and framebuffer clearing

--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
     PipelineBatch.hpp
     Scene.hpp
     SceneObject.hpp
+    SceneRenderContext.hpp
     StagePipelines.hpp
     Texture.hpp
 )
