WIP: Rendering observers to off-screen targets. Built transfer engine

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -6,7 +6,11 @@ target_sources(BLIB PUBLIC
     PipelineParameters.hpp
     RenderPass.hpp
     RenderPassParameters.hpp
+    StandardAttachmentSet.hpp
+    StandardImageBuffer.hpp
     Swapchain.hpp
+    Transferable.hpp
+    TransferEngine.hpp
     Viewport.hpp
     VulkanState.hpp
 )
