Partially implement overlay framework. Get offscreen -> screen rendering working

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PUBLIC
 )
 
 add_subdirectory(Cameras)
+add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Renderables)
 add_subdirectory(Renderer)
