Create dedicated PostFX class to replace overlay::Image for post processing

--- a/include/BLIB/Render/Renderer/CMakeLists.txt
+++ b/include/BLIB/Render/Renderer/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PUBLIC
     ObjectBatch.hpp
     ObjectFlags.hpp
     PipelineBatch.hpp
+    PostFX.hpp
     Scene.hpp
     SceneObject.hpp
     SceneRenderContext.hpp
