--- a/src/Render/Renderer/CMakeLists.txt
+++ b/src/Render/Renderer/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PRIVATE
     ObjectBatch.cpp
     PipelineBatch.cpp
+    PostFX.cpp
     Scene.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
