Implement depth buffers and depth testing

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     AttachmentSet.hpp
+    ColorAttachmentSet.hpp
     CommonDescriptorSetLayouts.hpp
     DescriptorPoolRequirements.hpp
     Framebuffer.hpp
