Create transforms module. Create roll+axis orientation class. Refactor Camera3D to use it

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,5 @@ add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
+add_subdirectory(Transforms)
 add_subdirectory(Util)
