--- a/examples/Renderer/CMakeLists.txt
+++ b/examples/Renderer/CMakeLists.txt
@@ -14,3 +14,10 @@ set_target_properties(renderer
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}"
 )
+
+# Copy compiled shaders. This step is not needed for top-level targets that use BLIB as a module
+add_custom_target(copy_shaders
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_shaders.cmake
+    DEPENDS blib_builtin_shaders
+)
+add_dependencies(renderer copy_shaders)
