--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory(Primitives)
 add_subdirectory(Renderables)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
+add_subdirectory(Shaders)
 add_subdirectory(Uniforms)
 add_subdirectory(Vulkan)
