Rename some folders and classes

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -8,8 +8,8 @@ add_subdirectory(Cameras)
 add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Renderables)
-add_subdirectory(Renderer)
 add_subdirectory(Resources)
+add_subdirectory(Scenes)
 add_subdirectory(Uniforms)
 add_subdirectory(Util)
 add_subdirectory(Vulkan)
