--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -1,15 +1,15 @@
 target_sources(BLIB PUBLIC
     DrawParameters.hpp
     Material.hpp
-    ObjectBatch.hpp
     ObjectFlags.hpp
     PipelineBatch.hpp
     PostFX.hpp
     Scene.hpp
     SceneObject.hpp
     SceneRenderContext.hpp
+    StageBatch.hpp
     StagePipelines.hpp
     Texture.hpp
 )
 
-add_subdirectory(Scenes)
+add_subdirectory(Stages)
