--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -7,8 +7,8 @@ add_subdirectory(Cameras)
 add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Renderables)
-add_subdirectory(Renderer)
 add_subdirectory(Resources)
+add_subdirectory(Scenes)
 add_subdirectory(Shaders)
 add_subdirectory(Uniforms)
 add_subdirectory(Vulkan)
