--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -1,12 +1,12 @@
 target_sources(BLIB PRIVATE
-    ObjectBatch.cpp
     PipelineBatch.cpp
     PostFX.cpp
     Scene.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
+    StageBatch.cpp
     StagePipelines.cpp
     Texture.cpp
 )
 
-add_subdirectory(Scenes)
+add_subdirectory(Stages)
