Fix engine shutdown. Refactor ECS to have dynamic component pools instead of global/static. Remove container::Any

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ project(BLIB C CXX)
 option(BUILD_TESTS "On to build unit tests" On)
 option(BUILD_EXAMPLES "On to build examples" On)
 option(ON_CI "True when on CI, false when local" Off)
+
+option(BLIB_ECS_USE_WIDE_MASK "True to use 128 bit component mask, false for 64 bit component mask" Off)
 option(COMPILE_SHADERS "True to build built-in shaders, off to skip" On)
 set(RUN_PATH ${PROJECT_SOURCE_DIR} CACHE PATH "Working directory of the final built executables")
 set(SHADER_PATH "Resources/Shaders" CACHE PATH "Path where compiled shaders should go")
@@ -31,8 +33,8 @@ add_library(BLIB STATIC)
 
 set(BLIB_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-include(blib_helpers)
-configure_target(BLIB)
+include(configure_blib_target)
+configure_blib_target(BLIB)
 
 set(BUILD_SHARED_LIBS Off)
 add_compile_definitions(SFML_STATIC)
