Introduce engine::Systems mechanism for managing frame stages, multi-threading, and ECS management

--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -2,8 +2,10 @@ target_sources(BLIB PUBLIC
     Configuration.hpp
     Engine.hpp
     Flags.hpp
+    FrameStage.hpp
     Settings.hpp
     State.hpp
+    Systems.hpp
     Worker.hpp
 )
 
