WIP/UNTESTED: Working on integrating renderer with ECS

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -5,11 +5,16 @@ target_sources(BLIB PUBLIC
 )
 
 add_subdirectory(Cameras)
+add_subdirectory(Components)
+add_subdirectory(Descriptors)
+add_subdirectory(Events)
 add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Renderables)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
+add_subdirectory(Systems)
+add_subdirectory(Transfers)
 add_subdirectory(Uniforms)
 add_subdirectory(Util)
 add_subdirectory(Vulkan)
