--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -4,11 +4,14 @@ target_sources(BLIB PRIVATE
 )
 
 add_subdirectory(Cameras)
+add_subdirectory(Descriptors)
 add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Renderables)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
 add_subdirectory(Shaders)
+add_subdirectory(Systems)
+add_subdirectory(Transfers)
 add_subdirectory(Uniforms)
 add_subdirectory(Vulkan)
