--- a/include/BLIB/Render/Systems/CMakeLists.txt
+++ b/include/BLIB/Render/Systems/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PUBLIC
+	BuiltinDescriptorComponentSystems.hpp
+	GenericDescriptorComponentSystem.hpp
 	GenericDrawableSystem.hpp
-	Transform3DSystem.hpp
 )
