Remove uniforms. Impl default object and texture pool descriptor sets. Build system for scene-level descriptor sets

--- a/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(BLIB PUBLIC
+	CommonSceneDescriptorSetFactory.hpp
+	CommonSceneDescriptorSetInstance.hpp
 	DefaultObjectDescriptorSetFactory.hpp
 	DefaultObjectDescriptorSetInstance.hpp
-	#TexturesDescriptorSetFactory.hpp
-	#TexturesDescriptorSetInstance.hpp
+	TexturesDescriptorSetFactory.hpp
+	TexturesDescriptorSetInstance.hpp
 )
