--- a/src/Render/Descriptors/CMakeLists.txt
+++ b/src/Render/Descriptors/CMakeLists.txt
@@ -1,5 +1,8 @@
 target_sources(BLIB PRIVATE
+	SceneDescriptorSetInstance.cpp
 	DescriptorSetFactoryCache.cpp
 	DescriptorSetInstance.cpp
 	DescriptorSetInstanceCache.cpp
 )
+
+add_subdirectory(Builtin)
