Implement common scene descriptor set. Update shaders. Fix some issues, some still remain

--- a/src/Render/Shaders/CMakeLists.txt
+++ b/src/Render/Shaders/CMakeLists.txt
@@ -6,7 +6,8 @@ compile_shaders(
     SHADERS
 	empty.vert
     imageOverlay.frag
-    test.frag
-    test.vert
-    testSkinned.frag
+    opaque.frag
+    opaque.vert
+    skinned.vert
+    skinned.frag
 )
