--- a/include/BLIB/Render/Primitives/CMakeLists.txt
+++ b/include/BLIB/Render/Primitives/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(BLIB PUBLIC
+    AlignedBuffer.hpp
     GenericBuffer.hpp
+    GenericBufferPriv.hpp
     IndexBuffer.hpp
     Vertex.hpp
 )
