Move buffers into transfers module

--- a/include/BLIB/Render/Transfers/CMakeLists.txt
+++ b/include/BLIB/Render/Transfers/CMakeLists.txt
@@ -1,4 +1,7 @@
 target_sources(BLIB PUBLIC
+    AlignedBuffer.hpp
+    GenericBuffer.hpp
+    GenericBufferPriv.hpp
 	Transferable.hpp
 	TransferContext.hpp
 	TransferEngine.hpp
