Implement buffer hierarchy and uniform buffer utility

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PUBLIC
+    AlignedBuffer.hpp
     AttachmentSet.hpp
     ColorAttachmentSet.hpp
     CommonDescriptorSetLayouts.hpp
