Changes to get all flows mostly working. Bug in TransferEngine

--- a/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
 	CommonSceneDescriptorSetInstance.hpp
 	DefaultObjectDescriptorSetFactory.hpp
 	DefaultObjectDescriptorSetInstance.hpp
+	PostFXDescriptorSetFactory.hpp
 	TexturesDescriptorSetFactory.hpp
 	TexturesDescriptorSetInstance.hpp
 )
