Move Texture and Material into Resources module

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -1,9 +1,11 @@
 target_sources(BLIB PUBLIC
     BindlessTextureArray.hpp
+    Material.hpp
     MaterialPool.hpp
     PipelineCache.hpp
     RenderPassCache.hpp
     ScenePool.hpp
+    Texture.hpp
     TexturePool.hpp
     TextureRef.hpp
 )
