--- a/src/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/src/Render/Descriptors/Builtin/CMakeLists.txt
@@ -1,9 +1,11 @@
 target_sources(BLIB PRIVATE
-	CommonSceneDescriptorSetFactory.cpp
-	CommonSceneDescriptorSetInstance.cpp
-	MeshDescriptorSetFactory.cpp
-	MeshDescriptorSetInstance.cpp
-	PostFXDescriptorSetFactory.cpp
-	TexturesDescriptorSetFactory.cpp
-	TexturesDescriptorSetInstance.cpp
+	BasicObjectFactory.cpp
+	BasicObjectInstance.cpp
+	PostFXFactory.cpp
+	Scene2DLitFactory.cpp
+	Scene2DLitInstance.cpp
+	Scene3DUnlitFactory.cpp
+	Scene3DUnlitInstance.cpp
+	TexturePoolFactory.cpp
+	TexturePoolInstance.cpp
 )
