--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -9,10 +9,10 @@ add_subdirectory(Cameras)
 add_subdirectory(Components)
 add_subdirectory(Descriptors)
 add_subdirectory(Events)
-add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
 add_subdirectory(Systems)
+add_subdirectory(Targets)
 add_subdirectory(Transfers)
 add_subdirectory(Vulkan)
