Remove ability/requirement to delete scene objects by ECS id. Define SceneBase interface

--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
     PipelineBatch.hpp
     PostFX.hpp
     Scene.hpp
+    SceneBase.hpp
     SceneObject.hpp
     SceneRenderContext.hpp
     StageBatch.hpp
