--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
     PipelineBatch.cpp
     PostFX.cpp
     Scene.cpp
+    SceneBase.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
     StageBatch.cpp
