--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -1,8 +1,8 @@
 target_sources(BLIB PRIVATE
+    BasicScene.cpp    
     PipelineBatch.cpp
     PostFX.cpp
     Scene.cpp
-    SceneBase.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
     StageBatch.cpp
