Begin boilerplate for Drawable module

--- a/include/BLIB/ECS/CMakeLists.txt
+++ b/include/BLIB/ECS/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PUBLIC
     Entity.hpp
     Events.hpp
     Registry.hpp
+    StableHandle.hpp
     View.hpp
     ViewImpl.hpp
 )
