--- a/include/BLIB/Render/Components/CMakeLists.txt
+++ b/include/BLIB/Render/Components/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
 	DescriptorComponentBase.hpp
 	DrawableBase.hpp
 	Mesh.hpp
+	OverlayScaler.hpp
 	SceneObjectRef.hpp
 	Sprite.hpp
 	Texture.hpp
