--- a/include/BLIB/Render/Systems/CMakeLists.txt
+++ b/include/BLIB/Render/Systems/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(BLIB PUBLIC
 	CameraUpdateSystem.hpp
 	GenericDescriptorComponentSystem.hpp
 	GenericDrawableSystem.hpp
+	OverlayScaler.hpp
 	RenderSystem.hpp
 )
