--- a/src/Render/Resources/CMakeLists.txt
+++ b/src/Render/Resources/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PRIVATE
     MaterialPool.cpp
     PipelineCache.cpp
     RenderPassCache.cpp
+    RenderTexture.cpp
     ScenePool.cpp
     Texture.cpp
     TexturePool.cpp
