Move Texture and RenderTexture into Vulkan module/namespace

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -11,8 +11,10 @@ target_sources(BLIB PUBLIC
     PipelineParameters.hpp
     RenderPass.hpp
     RenderPassParameters.hpp
+    RenderTexture.hpp
     StandardAttachmentSet.hpp
     StandardAttachmentBuffers.hpp
     Swapchain.hpp
+    Texture.hpp
     VulkanState.hpp
 )
