--- a/src/Render/Vulkan/CMakeLists.txt
+++ b/src/Render/Vulkan/CMakeLists.txt
@@ -7,8 +7,10 @@ target_sources(BLIB PRIVATE
     PipelineParameters.cpp
     RenderPass.cpp
     RenderPassParameters.cpp
+    RenderTexture.cpp
     StandardAttachmentBuffers.cpp
     Swapchain.cpp
+    Texture.cpp
     VulkanState.cpp
 )
 
