--- a/src/Render/Resources/CMakeLists.txt
+++ b/src/Render/Resources/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
     BindlessTextureArray.cpp
     MaterialPool.cpp
     PipelineCache.cpp
+    PipelineLayoutCache.cpp
     RenderPassCache.cpp
     ScenePool.cpp
     TexturePool.cpp
