Implement batching of render objects by pipeline layout, then by pipeline

--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -1,9 +1,10 @@
 target_sources(BLIB PUBLIC
-    BasicScene.hpp    
+    BasicScene.hpp
+    LayoutBatch.hpp
+    ObjectBatch.hpp
     PipelineBatch.hpp
     PostFX.hpp
     Scene.hpp
     SceneObject.hpp
     SceneRenderContext.hpp
-    StageBatch.hpp
 )
