--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -1,9 +1,10 @@
 target_sources(BLIB PRIVATE
-    BasicScene.cpp    
+    BasicScene.cpp
+    LayoutBatch.cpp
+    ObjectBatch.cpp
     PipelineBatch.cpp
     PostFX.cpp
     Scene.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
-    StageBatch.cpp
 )
