Refactor unlit/lit scene descriptor sets into single descriptor set

--- a/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
@@ -4,10 +4,10 @@ target_sources(BLIB PUBLIC
 	Object3DFactory.hpp
 	Object3DInstance.hpp
 	PostFXFactory.hpp
-	Scene2DLitFactory.hpp
-	Scene2DLitInstance.hpp
-	Scene3DUnlitFactory.hpp
-	Scene3DUnlitInstance.hpp
+	Scene2DFactory.hpp
+	Scene2DInstance.hpp
+	Scene3DFactory.hpp
+	Scene3DInstance.hpp
 	TexturePoolFactory.hpp
 	TexturePoolInstance.hpp
 )
