Implement simple, resizable Buffer wrapped and deferred cleanup utility

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(BLIB PUBLIC
     AlignedBuffer.hpp
     AttachmentBuffer.hpp
     AttachmentSet.hpp
+    Buffer.hpp
+    CleanupManager.hpp
     CommonSamplers.hpp
     DescriptorPool.hpp
     Framebuffer.hpp
