In the middle of refactoring descriptors to split static/dynamic. Overlay is biggest remaining item. All untested

--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(BLIB PUBLIC
     BasicScene.hpp
+    Key.hpp
     PostFX.hpp
     Scene.hpp
     SceneObject.hpp
+    SceneObjectStorage.hpp
     SceneRenderContext.hpp
 )
