--- a/src/Render/Resources/CMakeLists.txt
+++ b/src/Render/Resources/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PRIVATE
     PipelineLayoutCache.cpp
     RenderPassCache.cpp
     ScenePool.cpp
+    ShaderModuleCache.cpp
     TexturePool.cpp
     TextureRef.cpp
 )
